# Projects

./: README.md
ROS_project/: .gitignore  .gitmodules
ROS_project/avalanche_rescue/: README.md
ROS_project/avalanche_rescue/Documentation/Team_Pi_Report_Latex/: autonomous_Pi.tex
ROS_project/avalanche_rescue/simulation/unity_template/: README.md
ROS_project_avalanche_rescue/: Group_Projects_Info.md  README.md  how_to_run.md
ROS_project_avalanche_rescue/simulation/unity_template/: README.md
ROS_project_avalanche_rescue/simulation/unity_template/catkin_ws/src/beacon/: CMakeLists.txt  README.md
ROS_project_avalanche_rescue/simulation/unity_template/catkin_ws/src/beacon/msg/: beacon_msg.msg
ROS_project_avalanche_rescue/simulation/unity_template/catkin_ws/src/beacon/src/: receiverNode.cpp
ROS_project_avalanche_rescue/simulation/unity_template/catkin_ws/src/transmitters/: CMakeLists.txt  package.xml
ROS_project_avalanche_rescue/simulation/unity_template/catkin_ws/src/transmitters/msg/: transmitter.msg  transmitter_array.msg
ROS_project_avalanche_rescue/simulation/unity_template/catkin_ws/src/transmitters/src/: transmitterNode.cpp
ScaraRobot/: README.md
ScaraRobot/Base_Joint/Control/MATLAB/: Control.slx  Controller.slx  DH2Ht.m  PlotCF.m  Trajectory_splines_backup.m  scara_model.m  trajectory.m  workspace_variables.m
ScaraRobot/Base_Joint/Control/shared_files/: Controller_2018b.slx  test_states_2018b.slx
ScaraRobot/Base_Joint/EtherLab/: Ethercat_data.txt  motor_ec1.m
ScaraRobot/Base_Joint/Mechanical_Design/: casingshaft2.stp  link_adapter.stp  motor_casing_orig.stp
ScaraRobot/Base_Joint/PCB_Design/: Electrical_design.drawio
ScaraRobot/Base_Joint/PCB_Design/Oleksandr PCB/: mainboard_10_1_Feb_2022,_200341.b##  mainboard_10_1_Feb_2022,_200341.b#1  mainboard_10_1_Feb_2022,_200341.brd  mainboard_10_1_Feb_2022,_200341.s##  mainboard_10_1_Feb_2022,_200341.sch
ScaraRobot/Control/: README.md
ScaraRobot/Control/HighLevelControl/: Kinematics_scara.asv  Kinematics_scara.m  PlotCF.asv  Trajectory_splines.asv  Trajectory_splines.m  robot_ForwardKinematic.m  robot_Jacobians.m  test_states.slx
ScaraRobot/Control/LowLevelControl/: LowLevelControl.atsln
ScaraRobot/EtherLab/: Control.slx  Control_ETHERLAB_2018b.slx  README.md
ScaraRobot/Mechanical_Design/: README.md
ScaraRobot/Mechanical_Design/CADFiles/: Shaft1.stp  Shaft2.stp  bearing1support.stp  bearing2support.stp  casing_middle.stp
ScaraRobot/PCB_Design/: README.md
ScaraRobot/PCB_Design/PCB_Basejoint/: joint_1.b#1  joint_1.brd
ScaraRobot/gripper/: README.md
(+156 files in other folders)
